--- a/wildcatweb/src/features/commandPanel/dashboards/sensor/styles/SensorDash.module.css
+++ b/wildcatweb/src/features/commandPanel/dashboards/sensor/styles/SensorDash.module.css
@@ -52,14 +52,14 @@
     width: 70px;
     height: 70px;
     cursor: pointer;
-    border: var(--border-width-standard) solid var(--color-gray-600);
+    border: var(--border-width-standard) solid var(--color-gray-medium);
     transition: all var(--transition-normal);
 }
 
 .colorButton:hover {
     transform: scale(1.1);
     box-shadow: var(--glow-white);
-    border-color: var(--color-white);
+    border-color: var(--color-background);
 }
 
 .colorButton:active {
@@ -69,7 +69,7 @@
 .noColorButton {
     background: none;
     padding: 0;
-    border: var(--border-width-standard) solid var(--color-gray-600);
+    border: var(--border-width-standard) solid var(--color-gray-medium);
     border-radius: 50%;
     width: 70px;
     height: 70px;
@@ -83,7 +83,7 @@
 .noColorButton:hover {
     transform: scale(1.1);
     box-shadow: var(--glow-white);
-    border-color: var(--color-white);
+    border-color: var(--color-background);
 }
 
 .noColorButton img {
