--- a/wildcatweb/src/features/commandPanel/dashboards/timer/styles/TimeDash.module.css
+++ b/wildcatweb/src/features/commandPanel/dashboards/timer/styles/TimeDash.module.css
@@ -57,7 +57,7 @@
 
 .timeButton:hover:not(:disabled) {
     transform: var(--button-scale-hover);
-    border-color: var(--button-hover-border);
+    border-color: var(--button-default-border);
 }
 
 .timeButton:active:not(:disabled) {
@@ -139,6 +139,6 @@
     position: absolute;
     top: var(--spacing-4);
     right: var(--spacing-4);
-    color: var(--color-success);
+    color: var(--color-success-main);
     font-size: var(--font-size-xl);
 }
